kubernetes/apps/observability/goldpinger/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldpinger
  namespace: observability
  annotations:
    glance/internal: "true"
    glance/icon: di:flightradar24
    glance/description: Internal Connectivity Checker
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "goldpinger.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: goldpinger
          port: 8081
